--- a/PersonalWebsite/PersonalWebsite/Views/Shared/_Layout.cshtml
+++ b/PersonalWebsite/PersonalWebsite/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Projects", "Projects", "Home")</li>
+                    <li>@Html.ActionLink("Skills", "Skills", "Home")</li>
                 </ul>
             </div>
         </div>
