Previous works attempt 2

--- a/PersonalWebsite/PersonalWebsite/Views/Home/Projects.cshtml
+++ b/PersonalWebsite/PersonalWebsite/Views/Home/Projects.cshtml
@@ -5,4 +5,4 @@
 
 <h2>Projects</h2>
 
-<a href="FinalSubmission.pdf">Download File Database PDF</a>
+<a href="FinalSubmission.pdf" download>Download Database PDF</a>
