--- a/PersonalWebsite/PersonalWebsite/Views/Home/About.cshtml
+++ b/PersonalWebsite/PersonalWebsite/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About me";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>I'm finishing up my Junior year in the MIS program at OU. This website is my test bench for all things HTML</p>
