--- a/PersonalWebsite/PersonalWebsite/Views/Home/Projects.cshtml
+++ b/PersonalWebsite/PersonalWebsite/Views/Home/Projects.cshtml
@@ -5,4 +5,5 @@
 
 <h2>Projects</h2>
 
-<a href="FinalSubmission.pdf" download>Download Database PDF</a>
+
+<a href="~/Works/FinalSubmission.pdf">Database Project</a>
